--- a/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
+++ b/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
@@ -140,6 +140,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
