--- a/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
+++ b/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
@@ -229,6 +229,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
