Updated the database - added marketing summarty endpoint

--- a/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
+++ b/AncestryCodeTestBackend/AncestryCodeTestBackend/AncestryCodeTestBackend.csproj
@@ -186,11 +186,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\MarketingSummaryController.cs" />
     <Compile Include="Controllers\SurveyResultsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AncestryCodeTestBackendContext.cs" />
+    <Compile Include="Models\MarketingSummaryDTO.cs" />
     <Compile Include="Models\SurveyResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
